fin de la modal

--- a/presentation.html
+++ b/presentation.html
@@ -10,141 +10,172 @@
     <link rel="apple-touch-icon" href="./img/logo.png">
 </head>
 <body style="overflow-x: hidden;">
-<div class="PagePres">
-    <nav class="navbar">
-        <a href="index.html"><div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
-        <div class="navbarElement">
-            <p><a href="presentation.html">PRÉSENTATION</a></p>
-            <p><a href="project.html">PROJETS</a></p>
-            <p><a href="contact.html">CONTACT</a></p>
-        </div>
-        <div class="navRight">
-            <div id="clock">
-                --:--:--
+<div id="page-wrapper">
+    <div class="PagePres">
+        <nav class="navbar">
+            <a href="index.html">
+                <div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div>
+            </a>
+            <div class="navbarElement">
+                <p><a href="presentation.html">PRÉSENTATION</a></p>
+                <p><a href="project.html">PROJETS</a></p>
+                <p><a href="contact.html">CONTACT</a></p>
             </div>
-            <div class="toggle-switch">
-                <label class="switch-label">
-                    <input type="checkbox" class="checkbox">
-                    <span class="slider"></span>
-                </label>
-            </div>
-        </div>
-    </nav>
-    <div class="presentationContainer" >
-        <div class="presentationText">
-            <h1 class="competencetitle">Profil d'embarquement</h1>
-            <h2 class="h2pres">LADIES & GENTLEMEN, BIENVENUE À BORD !</h2>
-            <p class="presentation">Moi, c'est Anouk THOMAS, passionnée par les nouvelles aventures et étudiante en 2ème année de BTS Communication.
-                <br>
-                Pour moi, communiquer, c’est un peu comme préparer un voyage. Ce n'est pas juste envoyer une information, c’est choisir où on veut aller, tracer son propre chemin et surtout, vivre l'aventure ensemble.</p>
-            <h2 class="competencetitle">Mes Compétences</h2>
-            <div class="carousel-container">
-                <button class="carousel-btn left" id="prevBtn">‹</button>
-                <div class="carousel-track-container">
-                    <ul class="carousel-track">
-                        <li class="carousel-slide" id="Photoshop"><img src="./img/caroussel/photoshop.PNG" alt="Logo 3"></li>
-                        <li class="carousel-slide" id="Indesign"><img src="./img/caroussel/Indesign.PNG" alt="Logo 5"></li>
-                        <li class="carousel-slide" id="Illustrator"><img src="./img/caroussel/Illustrator.PNG" alt="Logo 12"></li>
-                        <li class="carousel-slide" id="Word"><img src="./img/caroussel/word.PNG" alt="Logo 7"></li>
-                        <li class="carousel-slide" id="Excel"><img src="./img/caroussel/Exel.PNG" alt="Logo 13"></li>
-                        <li class="carousel-slide" id="Wordpress"><img src="./img/caroussel/wordpress%20(1).png" alt="Logo 4"></li>
-                        <li class="carousel-slide" id="Drive"><img src="./img/caroussel/Drive.PNG" alt="Logo 14"></li>
-                        <li class="carousel-slide" id="Trello"><img src="./img/caroussel/trello.PNG" alt="Logo 6"></li>
-                        <li class="carousel-slide" id="Capcut"><img src="./img/caroussel/Capcut.webp" alt="Logo 2"></li>
-                        <li class="carousel-slide" id="Canva"><img src="./img/caroussel/canva.png" alt="Logo 1"></li>
-                        <li class="carousel-slide" id="Pinterest"><img src="./img/caroussel/Pinterst.PNG" alt="Logo 15"></li>
-                        <li class="carousel-slide" id="Linkedin"><img src="./img/caroussel/Linkedin.PNG" alt="Logo 9"></li>
-                        <li class="carousel-slide" id="Tiktok"><img src="./img/caroussel/Tiktok.PNG" alt="Logo 10"></li>
-                        <li class="carousel-slide" id="Instagram"><img src="./img/caroussel/Instagram.PNG" alt="Logo 11"></li>
-                        <li class="carousel-slide" id="Facebook"><img src="./img/caroussel/Facebook.PNG" alt="Logo 8"></li>
-                    </ul>
+            <div class="navRight">
+                <div id="clock">
+                    --:--:--
                 </div>
-                <p id="nomLogo"></p>
-                <button class="carousel-btn right" id="nextBtn">›</button>
-            </div>
-        </div>
-        <div>
-            <img src="./img/ANOUK_THOMAS .png" class="passport">
-        </div>
-    </div>
-
-    <div class="passion">
-        <h1 class="passionTitle">MA PASSION</h1>
-        <p class="passionSubTitle">Le basket</p>
-        <p class="passiontext">Je suis passionnée par le sport depuis petite et plus particulièrement le basket que je pratique en club depuis l’âge de 5 ans. </p>
-    </div>
-    <div class="FlyersCapitaine">
-        <div class="flyers">
-            <img class="imgFlyerPassion1" src="./img/bages/petite.jpg" alt="Flyer Grizzlys Catalans">
-            <img class="imgFlyerPassion2" src="./img/bages/moyenne.jpg" alt="Flyer Grizzlys Catalans">
-            <img class="imgFlyerPassion3" src="./img/bages/grande.jpg" alt="Flyer Grizzlys Catalans">
-        </div>
-        <div class="divCapitaine">
-            <h2 class="capitaine">CAPITAINE</h2>
-            <p class="capitaineText">Être capitaine de mon équipe, me donne une grande responsabilité sur le terrain. Cela renforce mes compétences à motiver et unir mes coéquipières, à communiquer et à devoir prendre certaines décisions.</p>
-        </div>
-    </div>
-
-    <div class="avionDiv"><img src="./img/presentation/avion.png" alt="avion" class="avionPresentation"></div>
-
-
-    <div class="text">
-        <h1 class="titreIdentitePresentation">Dans ma valise : mes indispensables de communicante</h1>
-    </div>
-
-    <div class="FlecheTextSurligneur">
-        <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheSurligneur">
-        <p class="textSurligneur">SURLIGNEURS</p>
-    </div>
-    <div class="bacAeroport">
-        <div>
-            <div class="FlecheTextIpad">
-                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheIpad">
-                <p class="textIpad">IPAD</p>
-            </div>
-            <div class="FlecheTextBasket">
-                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
-                <p class="textBasket">AIRPODS</p>
-            </div>
-            <div class="FlecheTextBasket">
-                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
-                <p class="textBasket">SNEAKERS</p>
-            </div>
-        </div>
-        <img src="./img/presentation/Mes_indispensables_en_communication.png" alt="indispensables en communication" class="indispensablesCom">
-        <div>
-            <div class="FlecheTextIphone">
-                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheIphone">
-                <p class="textIphone">IPHONE</p>
-            </div>
-            <div class="FlecheTextAirpods">
-                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheAirpods">
-                <p class="textAirpods">CARNET</p>
-            </div>
-            <div class="FlecheTextMacbook">
-                <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheMacbook">
-                <p class="textMacbook">MACBOOK</p>
-            </div>
-        </div>
-    </div>
-
-    <footer>
-        <nav class="footerNavbar">
-            <div class="footerLogosLeft">
-                <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
-                    <span class="footerLinkLabel">LINKEDIN</span>
-                </a>
-                <a href="mailto:anoukthms@icloud.com" class="footerLink">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
-                    <span class="footerLinkLabel">MAIL</span>
-                </a>
-            </div>
-            <div class="footerCopyright">
-                <p>© 2025 – ANOUK THOMAS</p>
+                <div class="toggle-switch">
+                    <label class="switch-label">
+                        <input type="checkbox" class="checkbox">
+                        <span class="slider"></span>
+                    </label>
+                </div>
             </div>
         </nav>
-    </footer>
+        <div class="presentationContainer">
+            <div class="presentationText">
+                <h1 class="competencetitle">Profil d'embarquement</h1>
+                <h2 class="h2pres">LADIES & GENTLEMEN, BIENVENUE À BORD !</h2>
+                <p class="presentation">Moi, c'est Anouk THOMAS, passionnée par les nouvelles aventures et étudiante en
+                    2ème année de BTS Communication.
+                    <br>
+                    Pour moi, communiquer, c’est un peu comme préparer un voyage. Ce n'est pas juste envoyer une
+                    information, c’est choisir où on veut aller, tracer son propre chemin et surtout, vivre l'aventure
+                    ensemble.</p>
+                <h2 class="competencetitle">Mes Compétences</h2>
+                <div class="carousel-container">
+                    <button class="carousel-btn left" id="prevBtn">‹</button>
+                    <div class="carousel-track-container">
+                        <ul class="carousel-track">
+                            <li class="carousel-slide" id="Photoshop"><img src="./img/caroussel/photoshop.PNG"
+                                                                           alt="Logo 3"></li>
+                            <li class="carousel-slide" id="Indesign"><img src="./img/caroussel/Indesign.PNG"
+                                                                          alt="Logo 5"></li>
+                            <li class="carousel-slide" id="Illustrator"><img src="./img/caroussel/Illustrator.PNG"
+                                                                             alt="Logo 12"></li>
+                            <li class="carousel-slide" id="Word"><img src="./img/caroussel/word.PNG" alt="Logo 7"></li>
+                            <li class="carousel-slide" id="Excel"><img src="./img/caroussel/Exel.PNG" alt="Logo 13">
+                            </li>
+                            <li class="carousel-slide" id="Wordpress"><img src="./img/caroussel/wordpress%20(1).png"
+                                                                           alt="Logo 4"></li>
+                            <li class="carousel-slide" id="Drive"><img src="./img/caroussel/Drive.PNG" alt="Logo 14">
+                            </li>
+                            <li class="carousel-slide" id="Trello"><img src="./img/caroussel/trello.PNG" alt="Logo 6">
+                            </li>
+                            <li class="carousel-slide" id="Capcut"><img src="./img/caroussel/Capcut.webp" alt="Logo 2">
+                            </li>
+                            <li class="carousel-slide" id="Canva"><img src="./img/caroussel/canva.png" alt="Logo 1">
+                            </li>
+                            <li class="carousel-slide" id="Pinterest"><img src="./img/caroussel/Pinterst.PNG"
+                                                                           alt="Logo 15"></li>
+                            <li class="carousel-slide" id="Linkedin"><img src="./img/caroussel/Linkedin.PNG"
+                                                                          alt="Logo 9"></li>
+                            <li class="carousel-slide" id="Tiktok"><img src="./img/caroussel/Tiktok.PNG" alt="Logo 10">
+                            </li>
+                            <li class="carousel-slide" id="Instagram"><img src="./img/caroussel/Instagram.PNG"
+                                                                           alt="Logo 11"></li>
+                            <li class="carousel-slide" id="Facebook"><img src="./img/caroussel/Facebook.PNG"
+                                                                          alt="Logo 8"></li>
+                        </ul>
+                    </div>
+                    <p id="nomLogo"></p>
+                    <button class="carousel-btn right" id="nextBtn">›</button>
+                </div>
+            </div>
+            <div>
+                <img src="./img/ANOUK_THOMAS .png" class="passport">
+            </div>
+        </div>
+
+        <div class="passion">
+            <h1 class="passionTitle">MA PASSION</h1>
+            <p class="passionSubTitle">Le basket</p>
+            <p class="passiontext">Je suis passionnée par le sport depuis petite et plus particulièrement le basket que
+                je pratique en club depuis l’âge de 5 ans. </p>
+        </div>
+        <div class="FlyersCapitaine">
+            <div class="flyers">
+                <img class="imgFlyerPassion1" src="./img/bages/petite.jpg" alt="Flyer Grizzlys Catalans">
+                <img class="imgFlyerPassion2" src="./img/bages/moyenne.jpg" alt="Flyer Grizzlys Catalans">
+                <img class="imgFlyerPassion3" src="./img/bages/grande.jpg" alt="Flyer Grizzlys Catalans">
+            </div>
+            <div class="divCapitaine">
+                <h2 class="capitaine">CAPITAINE</h2>
+                <p class="capitaineText">Être capitaine de mon équipe, me donne une grande responsabilité sur le
+                    terrain. Cela renforce mes compétences à motiver et unir mes coéquipières, à communiquer et à devoir
+                    prendre certaines décisions.</p>
+            </div>
+        </div>
+
+        <div class="avionDiv"><img src="./img/presentation/avion.png" alt="avion" class="avionPresentation"></div>
+
+
+        <div class="text">
+            <h1 class="titreIdentitePresentation">Dans ma valise : mes indispensables de communicante</h1>
+        </div>
+
+        <div class="FlecheTextSurligneur">
+            <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheSurligneur">
+            <p class="textSurligneur">SURLIGNEURS</p>
+        </div>
+        <div class="bacAeroport">
+            <div>
+                <div class="FlecheTextIpad">
+                    <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheIpad">
+                    <p class="textIpad">IPAD</p>
+                </div>
+                <div class="FlecheTextBasket">
+                    <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
+                    <p class="textBasket">AIRPODS</p>
+                </div>
+                <div class="FlecheTextBasket">
+                    <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheBasket">
+                    <p class="textBasket">SNEAKERS</p>
+                </div>
+            </div>
+            <img src="./img/presentation/Mes_indispensables_en_communication.png" alt="indispensables en communication"
+                 class="indispensablesCom">
+            <div>
+                <div class="FlecheTextIphone">
+                    <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheIphone">
+                    <p class="textIphone">IPHONE</p>
+                </div>
+                <div class="FlecheTextAirpods">
+                    <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheAirpods">
+                    <p class="textAirpods">CARNET</p>
+                </div>
+                <div class="FlecheTextMacbook">
+                    <img src="./img/grizzlys/petiteFleche.webp" alt="petiteFleche" class="petiteFlecheMacbook">
+                    <p class="textMacbook">MACBOOK</p>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <nav class="footerNavbar">
+                <div class="footerLogosLeft">
+                    <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                  d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
+                        </svg>
+                        <span class="footerLinkLabel">LINKEDIN</span>
+                    </a>
+                    <a href="mailto:anoukthms@icloud.com" class="footerLink">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                            <path fill="currentColor"
+                                  d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
+                        </svg>
+                        <span class="footerLinkLabel">MAIL</span>
+                    </a>
+                </div>
+                <div class="footerCopyright">
+                    <p>© 2025 – ANOUK THOMAS</p>
+                </div>
+            </nav>
+        </footer>
+    </div>
 </div>
 <script src="data.js"></script>
 <script src="script.js"></script>
