--- a/index.html
+++ b/index.html
@@ -11,81 +11,95 @@
 </head>
 
 <body>
-<div id="allPage">
-    <div class="section-container">
-        <header>
-            <div class="Page1 section" src="" alt="">
+<div id="page-wrapper">
+    <div id="allPage">
+        <div class="section-container">
+            <header>
+                <div class="Page1 section" src="" alt="">
 
-                <nav class="navbar">
-                    <a href="index.html"><div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
-                    <div class="navbarElement">
-                        <p><a href="presentation.html">PRÉSENTATION</a></p>
-                        <p><a href="project.html">PROJETS</a></p>
-                        <p><a href="contact.html">CONTACT</a></p>
-                    </div>
-                    <div class="navRight">
-                    <div id="clock">
-                        --:--:--
-                    </div>
-                        <div class="toggle-switch">
-                            <label class="switch-label">
-                                <input type="checkbox" class="checkbox">
-                                <span class="slider"></span>
-                            </label>
+                    <nav class="navbar">
+                        <a href="index.html">
+                            <div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div>
+                        </a>
+                        <div class="navbarElement">
+                            <p><a href="presentation.html">PRÉSENTATION</a></p>
+                            <p><a href="project.html">PROJETS</a></p>
+                            <p><a href="contact.html">CONTACT</a></p>
+                        </div>
+                        <div class="navRight">
+                            <div id="clock">
+                                --:--:--
+                            </div>
+                            <div class="toggle-switch">
+                                <label class="switch-label">
+                                    <input type="checkbox" class="checkbox">
+                                    <span class="slider"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </nav>
+                    <div id="progress"></div>
+                    <div class="containerTitle">
+
+                        <div class="title">
+                            <H1>ANOUK THOMAS</H1>
+                        </div>
+                        <div class="subtitle">
+                            <p id="subtitle">CHARGÉE DE COMMUNICATION</p>
                         </div>
                     </div>
-                </nav>
-                <div id="progress"></div>
-                <div class="containerTitle">
+                    <div class="waveContainer">
+                        <hr style="border: none; height: 0;" class="separator">
+                        <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="#FAA1D4" d="M0,30 C360,90 1080,-30 1440,30 L1440,100 L0,100 Z"></path>
+                        </svg>
 
-                    <div class="title">
-                        <H1>ANOUK THOMAS</H1>
-                    </div>
-                    <div class="subtitle">
-                        <p id="subtitle">CHARGÉE DE COMMUNICATION</p>
+                        <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
+                            <path fill="#FAA1D4" d="M0,70 C360,10 1080,130 1440,70 L1440,0 L0,0 Z"></path>
+                        </svg>
                     </div>
                 </div>
-                <div class="waveContainer">
-                    <hr style="border: none; height: 0;" class="separator">
-                    <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
-                        <path fill="#FAA1D4" d="M0,30 C360,90 1080,-30 1440,30 L1440,100 L0,100 Z"></path>
-                    </svg>
 
-                    <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
-                        <path fill="#FAA1D4" d="M0,70 C360,10 1080,130 1440,70 L1440,0 L0,0 Z"></path>
-                    </svg>
-                </div>
-            </div>
-
-        </header>
+            </header>
             <H2 class="titleProjet">Projets</H2>
-        <button class="btn" onclick="window.location.href='project.html'">
-            Tous mes projets
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="15px" width="15px" class="icon">
-                <path id="path" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke="#ffffff" d="M8.91016 19.9201L15.4302 13.4001C16.2002 12.6301 16.2002 11.3701 15.4302 10.6001L8.91016 4.08008"></path>
-            </svg>
-        </button>
-        <div id="projetContainer">
-            <div class="Page2 section2" id="projects">
+            <button class="btn" onclick="window.location.href='project.html'">
+                Tous mes projets
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="15px" width="15px"
+                     class="icon">
+                    <path id="path" stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10"
+                          stroke-width="1.5" stroke="#ffffff"
+                          d="M8.91016 19.9201L15.4302 13.4001C16.2002 12.6301 16.2002 11.3701 15.4302 10.6001L8.91016 4.08008"></path>
+                </svg>
+            </button>
+            <div id="projetContainer">
+                <div class="Page2 section2" id="projects">
+                </div>
             </div>
+            <footer>
+                <nav class="footerNavbar">
+                    <div class="footerLogosLeft">
+                        <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank"
+                           class="footerLink">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                                <path fill="currentColor"
+                                      d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
+                            </svg>
+                            <span class="footerLinkLabel">LINKEDIN</span>
+                        </a>
+                        <a href="mailto:anoukthms@icloud.com" class="footerLink">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                                <path fill="currentColor"
+                                      d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
+                            </svg>
+                            <span class="footerLinkLabel">MAIL</span>
+                        </a>
+                    </div>
+                    <div class="footerCopyright">
+                        <p>© 2025 – ANOUK THOMAS</p>
+                    </div>
+                </nav>
+            </footer>
         </div>
-        <footer>
-            <nav class="footerNavbar">
-                <div class="footerLogosLeft">
-                    <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
-                        <span class="footerLinkLabel">LINKEDIN</span>
-                    </a>
-                    <a href="mailto:anoukthms@icloud.com" class="footerLink">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
-                        <span class="footerLinkLabel">MAIL</span>
-                    </a>
-                </div>
-                <div class="footerCopyright">
-                    <p>© 2025 – ANOUK THOMAS</p>
-                </div>
-            </nav>
-        </footer>
     </div>
 </div>
 <div id="cursorImage"></div>
