--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -10,158 +10,174 @@
     <link rel="apple-touch-icon" href="../img/logo.png">
 </head>
 <body>
-<nav class="navbar">
-    <a href="../index.html"><div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
-    <div class="navbarElement">
-        <p><a href="../presentation.html">PRÉSENTATION</a></p>
-        <p><a href="../project.html">PROJETS</a></p>
-        <p><a href="../contact.html">CONTACT</a></p>
-    </div>
-    <div class="navRight">
-        <div id="clock">
-            --:--:--
+<div id="page-wrapper">
+    <nav class="navbar">
+        <a href="../index.html">
+            <div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div>
+        </a>
+        <div class="navbarElement">
+            <p><a href="../presentation.html">PRÉSENTATION</a></p>
+            <p><a href="../project.html">PROJETS</a></p>
+            <p><a href="../contact.html">CONTACT</a></p>
         </div>
-        <div class="toggle-switch">
-            <label class="switch-label">
-                <input type="checkbox" class="checkbox">
-                <span class="slider"></span>
-            </label>
-        </div>
-    </div>
-</nav>
-<div class="titleimg">
-    <div class="imageprincipal">
-        <img class="imageprincipalBages" src="../img/cienfuegos/imagePrincipal.webp" alt="Cienfuegos">
-    </div>
-    <div class="projecttitleGrizzlys">
-        <div class="titletext">
-            <h1>FESTIVAL CIENFUEGOS</h1>
-        </div>
-        <div class="subtitleProject">
-            <p class="subtitleProject">COMMUNICATION ÉVÈNEMENTIELLE</p>
-        </div>
-    </div>
-</div>
-
-<div class="informationsProject">
-    <div class="informationsProjectLeft">
-        <div>
-            <h2 class="infoMiniTitle">ASSOCIATION</h2>
-            <p class="infoMiniText">FESTIVAL CIENFUEGOS</p>
-        </div>
-        <div>
-            <h2 class="infoMiniTitle">LOCALISATION</h2>
-            <p class="infoMiniText">ALENYA</p>
-        </div>
-        <div>
-            <h2 class="infoMiniTitle">ANNÉE</h2>
-            <p class="infoMiniText">2025</p>
-        </div>
-    </div>
-    <div class="informationsProjectRight">
-        <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">Le <STRONG>festival Cienfuegos</STRONG> d’Alénya, créé en 2020, est un événement latino-cubain organisé chaque été dans le parc du village. Il est entièrement gratuit et propose pendant quelques jours des concerts, des animations de danse (salsa, bachata…), des projections de films et un petit village avec restauration et artisanat.
-            Le festival a aussi une dimension solidaire, avec une collecte de médicaments ou de lunettes pour soutenir Cuba.</p>
-    </div>
-</div>
-<h1 class="titreIdentite">Idéntité visuelle</h1>
-<div class="projectContentGrizzlys">
-    <div class="colorsProjectCienfuegos">
-        <div class="fleche">
-            <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
-            <p class="TextLogo">Le logo</p>
-            <p class="NoCharte">(pas de charte graphique existante)</p>
-        </div>
-
-        <div class="logoCienfuegos">
-            <img class="imgLogoCienfuegos" src="../img/cienfuegos/logo.png">
-        </div>
-        <div class="colorNoir">
-        </div>
-    </div>
-</div>
-<div class="palette-container">
-    <div class="circles-group">
-        <div class="circle red"></div>
-        <div class="circle orange"></div>
-        <div class="circle yellow"></div>
-        <div class="circle green"></div>
-    </div>
-
-    <div class="logo-wrapper">
-        <img src="../img/cienfuegos/width_800.webp" alt="Logo Cienfuegos" class="main-logo">
-
-        <img src="../img/grizzlys/petiteFleche.webp" alt="" class="arrow">
-
-        <span class="logo-caption">Proposition d'un nouveau logo</span>
-    </div>
-</div>
-<div class="mainVideoWrapper">
-    <div class="fullVideoContainer">
-        <video controls class="fullVideo">
-            <source src="../img/cienfuegos/tiktok.MOV" type="video/mp4">
-            Votre navigateur ne supporte pas la vidéo.
-        </video>
-    </div>
-
-    <div class="videoDetailSection">
-        <div class="detailLineCienfuegos"></div>
-        <div class="detailContent">
-            <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
-            <p class="detailText">
-                C’est une tendance TikTok dont le but est de donner envie aux jeunes d’aller au festival, en suggérant que l’ambiance était géniale, puisque les participantes annoncent qu’elles reviendront l’année prochaine.
-            </p>
-        </div>
-    </div>
-</div>
-
-<h2 class="titreMerch">Proposition de goodies à l’effigie du nouveau logo :</h2>
-<div class="gridMerch">
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/tshirt.png" alt="tshirt" class="imageMerch">
-        <p class="texteMerch">T-shirts pour les bénévoles</p>
-    </div>
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/eventail.png" alt="eventail" class="imageMerch">
-        <p class="texteMerch">Éventails</p>
-    </div>
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/serviette.png" alt="serviette" class="imageMerch">
-        <p class="texteMerch">Petites serviettes pour les danseurs</p>
-    </div>
-    <div class="divMerch">
-        <img src="../img/cienfuegos/merch/totebag.png" alt="totebag" class="imageMerch">
-        <p class="texteMerch">Tote-bag</p>
-    </div>
-</div>
-
-<!--<div>-->
-<!--    <div>-->
-<!--        <p>Voici plus en détaille mon équipe et notre stratégie</p>-->
-<!--        p-->
-<!--    </div>-->
-<!--    <div>-->
-
-<!--    </div>-->
-<!--</div>-->
-
-<footer>
-    <nav class="footerNavbar">
-        <div class="footerLogosLeft">
-            <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
-                <span class="footerLinkLabel">LINKEDIN</span>
-            </a>
-            <a href="mailto:anoukthms@icloud.com" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
-                <span class="footerLinkLabel">MAIL</span>
-            </a>
-        </div>
-        <div class="footerCopyright">
-            <p>© 2025 – ANOUK THOMAS</p>
+        <div class="navRight">
+            <div id="clock">
+                --:--:--
+            </div>
+            <div class="toggle-switch">
+                <label class="switch-label">
+                    <input type="checkbox" class="checkbox">
+                    <span class="slider"></span>
+                </label>
+            </div>
         </div>
     </nav>
-</footer>
+    <div class="titleimg">
+        <div class="imageprincipal">
+            <img class="imageprincipalBages" src="../img/cienfuegos/imagePrincipal.webp" alt="Cienfuegos">
+        </div>
+        <div class="projecttitleGrizzlys">
+            <div class="titletext">
+                <h1>FESTIVAL CIENFUEGOS</h1>
+            </div>
+            <div class="subtitleProject">
+                <p class="subtitleProject">COMMUNICATION ÉVÈNEMENTIELLE</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="informationsProject">
+        <div class="informationsProjectLeft">
+            <div>
+                <h2 class="infoMiniTitle">ASSOCIATION</h2>
+                <p class="infoMiniText">FESTIVAL CIENFUEGOS</p>
+            </div>
+            <div>
+                <h2 class="infoMiniTitle">LOCALISATION</h2>
+                <p class="infoMiniText">ALENYA</p>
+            </div>
+            <div>
+                <h2 class="infoMiniTitle">ANNÉE</h2>
+                <p class="infoMiniText">2025</p>
+            </div>
+        </div>
+        <div class="informationsProjectRight">
+            <h2 class="infoMiniTitle">DESCRIPTION</h2>
+            <p class="infoMiniText">Le <STRONG>festival Cienfuegos</STRONG> d’Alénya, créé en 2020, est un événement
+                latino-cubain organisé chaque été dans le parc du village. Il est entièrement gratuit et propose pendant
+                quelques jours des concerts, des animations de danse (salsa, bachata…), des projections de films et un
+                petit village avec restauration et artisanat.
+                Le festival a aussi une dimension solidaire, avec une collecte de médicaments ou de lunettes pour
+                soutenir Cuba.</p>
+        </div>
+    </div>
+    <h1 class="titreIdentite">Idéntité visuelle</h1>
+    <div class="projectContentGrizzlys">
+        <div class="colorsProjectCienfuegos">
+            <div class="fleche">
+                <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
+                <p class="TextLogo">Le logo</p>
+                <p class="NoCharte">(pas de charte graphique existante)</p>
+            </div>
+
+            <div class="logoCienfuegos">
+                <img class="imgLogoCienfuegos" src="../img/cienfuegos/logo.png">
+            </div>
+            <div class="colorNoir">
+            </div>
+        </div>
+    </div>
+    <div class="palette-container">
+        <div class="circles-group">
+            <div class="circle red"></div>
+            <div class="circle orange"></div>
+            <div class="circle yellow"></div>
+            <div class="circle green"></div>
+        </div>
+
+        <div class="logo-wrapper">
+            <img src="../img/cienfuegos/width_800.webp" alt="Logo Cienfuegos" class="main-logo">
+
+            <img src="../img/grizzlys/petiteFleche.webp" alt="" class="arrow">
+
+            <span class="logo-caption">Proposition d'un nouveau logo</span>
+        </div>
+    </div>
+    <div class="mainVideoWrapper">
+        <div class="fullVideoContainer">
+            <video controls class="fullVideo">
+                <source src="../img/cienfuegos/tiktok.MOV" type="video/mp4">
+                Votre navigateur ne supporte pas la vidéo.
+            </video>
+        </div>
+
+        <div class="videoDetailSection">
+            <div class="detailLineCienfuegos"></div>
+            <div class="detailContent">
+                <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
+                <p class="detailText">
+                    C’est une tendance TikTok dont le but est de donner envie aux jeunes d’aller au festival, en
+                    suggérant que l’ambiance était géniale, puisque les participantes annoncent qu’elles reviendront
+                    l’année prochaine.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <h2 class="titreMerch">Proposition de goodies à l’effigie du nouveau logo :</h2>
+    <div class="gridMerch">
+        <div class="divMerch">
+            <img src="../img/cienfuegos/merch/tshirt.png" alt="tshirt" class="imageMerch">
+            <p class="texteMerch">T-shirts pour les bénévoles</p>
+        </div>
+        <div class="divMerch">
+            <img src="../img/cienfuegos/merch/eventail.png" alt="eventail" class="imageMerch">
+            <p class="texteMerch">Éventails</p>
+        </div>
+        <div class="divMerch">
+            <img src="../img/cienfuegos/merch/serviette.png" alt="serviette" class="imageMerch">
+            <p class="texteMerch">Petites serviettes pour les danseurs</p>
+        </div>
+        <div class="divMerch">
+            <img src="../img/cienfuegos/merch/totebag.png" alt="totebag" class="imageMerch">
+            <p class="texteMerch">Tote-bag</p>
+        </div>
+    </div>
+
+    <!--<div>-->
+    <!--    <div>-->
+    <!--        <p>Voici plus en détaille mon équipe et notre stratégie</p>-->
+    <!--        p-->
+    <!--    </div>-->
+    <!--    <div>-->
+
+    <!--    </div>-->
+    <!--</div>-->
+
+    <footer>
+        <nav class="footerNavbar">
+            <div class="footerLogosLeft">
+                <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                              d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
+                    </svg>
+                    <span class="footerLinkLabel">LINKEDIN</span>
+                </a>
+                <a href="mailto:anoukthms@icloud.com" class="footerLink">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                              d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
+                    </svg>
+                    <span class="footerLinkLabel">MAIL</span>
+                </a>
+            </div>
+            <div class="footerCopyright">
+                <p>© 2025 – ANOUK THOMAS</p>
+            </div>
+        </nav>
+    </footer>
+</div>
 <script src="../data.js"></script>
 <script src="../script.js"></script>
 </body>
