--- a/projects/lycee.html
+++ b/projects/lycee.html
@@ -10,113 +10,131 @@
     <link rel="apple-touch-icon" href="../img/logo.png">
 </head>
 <body>
-<nav class="navbar">
-    <a href="../index.html"><div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
-    <div class="navbarElement">
-        <p><a href="../presentation.html">PRÉSENTATION</a></p>
-        <p><a href="../project.html">PROJETS</a></p>
-        <p><a href="../contact.html">CONTACT</a></p>
-    </div>
-    <div class="navRight">
-        <div id="clock">
-            --:--:--
+<div id="page-wrapper">
+    <nav class="navbar">
+        <a href="../index.html">
+            <div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div>
+        </a>
+        <div class="navbarElement">
+            <p><a href="../presentation.html">PRÉSENTATION</a></p>
+            <p><a href="../project.html">PROJETS</a></p>
+            <p><a href="../contact.html">CONTACT</a></p>
         </div>
-        <div class="toggle-switch">
-            <label class="switch-label">
-                <input type="checkbox" class="checkbox">
-                <span class="slider"></span>
-            </label>
-        </div>
-    </div>
-</nav>
-<div class="titleimg">
-    <div class="imageprincipal">
-        <img class="imageprincipalBages" src="../img/lycee/imagePrincipal.jpg" alt="Union Basket Des Aspres">
-    </div>
-    <div class="projecttitleGrizzlys">
-        <div class="titletext">
-            <h1>LYCÉE ARISTIDE MAILLOL</h1>
-        </div>
-        <div class="subtitleProject">
-            <p class="subtitleProject">COMMUNICATION PUBLIQUE</p>
-        </div>
-    </div>
-</div>
-
-<div class="informationsProject">
-    <div class="informationsProjectLeft">
-        <div>
-            <h2 class="infoMiniTitle">ASSOCIATION</h2>
-            <p class="infoMiniText">LYCÉE ARISTIDE MAILLOL</p>
-        </div>
-        <div>
-            <h2 class="infoMiniTitle">LOCALISATION</h2>
-            <p class="infoMiniText">PERPIGNAN</p>
-        </div>
-        <div>
-            <h2 class="infoMiniTitle">ANNÉE</h2>
-            <p class="infoMiniText">2025</p>
-        </div>
-    </div>
-    <div class="informationsProjectRight">
-        <h2 class="infoMiniTitle">DESCRIPTION</h2>
-        <p class="infoMiniText">Le <strong>lycée Aristide Maillol</strong> de Perpignan a été créé au milieu des années 1990 et a ouvert ses portes vers 1995-1996, pour répondre à l’augmentation du nombre d’élèves dans la ville.
-            <br>La formation BTS Communication y est proposée depuis les années 2010. Elle prépare les étudiants aux métiers de la communication en deux ans après le baccalauréat.</p>
-    </div>
-</div>
-<h1 class="titreIdentite">Idéntité visuelle</h1>
-<div class="projectContentGrizzlys">
-    <div class="colorsProjectGrizzlys">
-        <div class="fleche">
-            <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
-            <p class="TextLogo">Le logo</p>
-        </div>
-        <div class="logoGrizzlys">
-            <img class="imgLogoBages" src="../img/lycee/logo.png">
-        </div>
-        <div class="colorTruquoise1">
-        </div>
-        <div class="colorTruquoise2">
-        </div>
-        <div class="colorTruquoise3">
-        </div>
-    </div>
-</div>
-<div class="mainVideoWrapper">
-    <div class="fullVideoContainer">
-        <video controls poster="../img/lycee/videoPoster.jpg" class="fullVideo">
-            <source src="../img/lycee/videoLycee.mov" type="video/mp4">
-            Votre navigateur ne supporte pas la vidéo.
-        </video>
-    </div>
-
-    <div class="videoDetailSection">
-        <div class="detailLine"></div>
-        <div class="detailContent">
-            <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
-            <p class="detailText">
-                Lors de ma première année de BTS Communication, j’ai réalisé une vidéo pour présenter notre formation. J’ai dû penser à plusieurs étapes : créer un petit scénario, choisir les plans et le cadrage, trouver les bons lieux pour filmer et organiser la vidéo pour qu’elle soit agréable à regarder. Je me suis aussi demandé quelles émotions nous voulions transmettre, afin que le public comprenne bien l’ambiance et les valeurs du BTS. Ce projet m’a aidé à développer ma créativité et à transformer une idée en une vidéo claire et intéressante.
-            </p>
-        </div>
-    </div>
-</div>
-<footer>
-    <nav class="footerNavbar">
-        <div class="footerLogosLeft">
-            <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/></svg>
-                <span class="footerLinkLabel">LINKEDIN</span>
-            </a>
-            <a href="mailto:anoukthms@icloud.com" class="footerLink">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/></svg>
-                <span class="footerLinkLabel">MAIL</span>
-            </a>
-        </div>
-        <div class="footerCopyright">
-            <p>© 2025 – ANOUK THOMAS</p>
+        <div class="navRight">
+            <div id="clock">
+                --:--:--
+            </div>
+            <div class="toggle-switch">
+                <label class="switch-label">
+                    <input type="checkbox" class="checkbox">
+                    <span class="slider"></span>
+                </label>
+            </div>
         </div>
     </nav>
-</footer>
+    <div class="titleimg">
+        <div class="imageprincipal">
+            <img class="imageprincipalBages" src="../img/lycee/imagePrincipal.jpg" alt="Union Basket Des Aspres">
+        </div>
+        <div class="projecttitleGrizzlys">
+            <div class="titletext">
+                <h1>LYCÉE ARISTIDE MAILLOL</h1>
+            </div>
+            <div class="subtitleProject">
+                <p class="subtitleProject">COMMUNICATION PUBLIQUE</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="informationsProject">
+        <div class="informationsProjectLeft">
+            <div>
+                <h2 class="infoMiniTitle">ASSOCIATION</h2>
+                <p class="infoMiniText">LYCÉE ARISTIDE MAILLOL</p>
+            </div>
+            <div>
+                <h2 class="infoMiniTitle">LOCALISATION</h2>
+                <p class="infoMiniText">PERPIGNAN</p>
+            </div>
+            <div>
+                <h2 class="infoMiniTitle">ANNÉE</h2>
+                <p class="infoMiniText">2025</p>
+            </div>
+        </div>
+        <div class="informationsProjectRight">
+            <h2 class="infoMiniTitle">DESCRIPTION</h2>
+            <p class="infoMiniText">Le <strong>lycée Aristide Maillol</strong> de Perpignan a été créé au milieu des
+                années 1990 et a ouvert ses portes vers 1995-1996, pour répondre à l’augmentation du nombre d’élèves
+                dans la ville.
+                <br>La formation BTS Communication y est proposée depuis les années 2010. Elle prépare les étudiants aux
+                métiers de la communication en deux ans après le baccalauréat.</p>
+        </div>
+    </div>
+    <h1 class="titreIdentite">Idéntité visuelle</h1>
+    <div class="projectContentGrizzlys">
+        <div class="colorsProjectGrizzlys">
+            <div class="fleche">
+                <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
+                <p class="TextLogo">Le logo</p>
+            </div>
+            <div class="logoGrizzlys">
+                <img class="imgLogoBages" src="../img/lycee/logo.png">
+            </div>
+            <div class="colorTruquoise1">
+            </div>
+            <div class="colorTruquoise2">
+            </div>
+            <div class="colorTruquoise3">
+            </div>
+        </div>
+    </div>
+    <div class="mainVideoWrapper">
+        <div class="fullVideoContainer">
+            <video controls poster="../img/lycee/videoPoster.jpg" class="fullVideo">
+                <source src="../img/lycee/videoLycee.mov" type="video/mp4">
+                Votre navigateur ne supporte pas la vidéo.
+            </video>
+        </div>
+
+        <div class="videoDetailSection">
+            <div class="detailLine"></div>
+            <div class="detailContent">
+                <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
+                <p class="detailText">
+                    Lors de ma première année de BTS Communication, j’ai réalisé une vidéo pour présenter notre
+                    formation. J’ai dû penser à plusieurs étapes : créer un petit scénario, choisir les plans et le
+                    cadrage, trouver les bons lieux pour filmer et organiser la vidéo pour qu’elle soit agréable à
+                    regarder. Je me suis aussi demandé quelles émotions nous voulions transmettre, afin que le public
+                    comprenne bien l’ambiance et les valeurs du BTS. Ce projet m’a aidé à développer ma créativité et à
+                    transformer une idée en une vidéo claire et intéressante.
+                </p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <nav class="footerNavbar">
+            <div class="footerLogosLeft">
+                <a href="https://www.linkedin.com/in/anouk-thomas-469045348/" target="_blank" class="footerLink">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                              d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2zm-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93zM6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37z"/>
+                    </svg>
+                    <span class="footerLinkLabel">LINKEDIN</span>
+                </a>
+                <a href="mailto:anoukthms@icloud.com" class="footerLink">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24">
+                        <path fill="currentColor"
+                              d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7L4 8v10h16V8zm0-2l8-5H4zM4 8V6v12z"/>
+                    </svg>
+                    <span class="footerLinkLabel">MAIL</span>
+                </a>
+            </div>
+            <div class="footerCopyright">
+                <p>© 2025 – ANOUK THOMAS</p>
+            </div>
+        </nav>
+    </footer>
+</div>
     <script src="../data.js"></script>
     <script src="../script.js"></script>
 </body>
