fin de la page escapix

--- a/projects/escapix.html
+++ b/projects/escapix.html
@@ -10,6 +10,11 @@
     <link rel="apple-touch-icon" href="../img/logo.png">
 </head>
 <body>
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div>
 <div id="page-wrapper">
     <nav class="navbar">
         <a href="../index.html">
@@ -92,6 +97,46 @@
 
         </div>
     </div>
+    <div class="containerCasa">
+        <div>
+            <p class="textCommuniquerEscapix">Communiqué de presse</p>
+            <img class="imageCommuniquer" src="../img/escapix/communiquer.png" alt="Création Grizzlys Catalans">
+
+        </div>
+        <div class="ordi">
+            <p class="texteOrdi2" style="font-size: 25px">Visuel d'un site internet</p>
+            <img src="../img/Catal’attitude/ordi.webp" alt="ordiCatalattitude" class="imageOrdiCatalattitude">
+            <video class="imageAprendreoualaisser" autoplay loop muted playsinline>
+                <source src="../img/escapix/reco_finale_escapix_OnCom.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+
+    <h1 class="titreIdentite">Carousel</h1>
+    <div class="escapixCarousel">
+        <p class="escapixDescription">Publication Instagram utilisant le storytelling pour présenter l’escape game et inciter à la réservation.</p>
+    </div>
+
+    <div class="divEscapixCarousel">
+        <img class="imgCarousel" src="../img/escapix/1.png" alt="1">
+        <img class="imgCarousel" src="../img/escapix/2.png" alt="2">
+        <img class="imgCarousel" src="../img/escapix/3.png" alt="3">
+    </div>
+
+    <div class="DivAvionJaune">
+        <img class="avionJaune" src="../img/escapix/AvionJaune.png" alt="avionJaune">
+        <img class="avionJaune" src="../img/escapix/AvionJaune.png" alt="avionJaune">
+    </div>
+
+    <div class="buttonStratégieEscapix">
+        <a href="#">
+            <button class="lienStratégieEscapix">Lien Stratégie</button>
+        </a>
+    </div>
+
+    <div class="divEscapixLogoLarge">
+        <img class="logoLarge" src="../img/escapix/logoLarge.png" alt="logoLarge">
+    </div>
 
     <footer>
         <nav class="footerNavbar">
@@ -118,7 +163,7 @@
     </footer>
 </div>
 
-
+<script src="../modal.js"></script>
 <script src="../data.js"></script>
 <script src="../script.js"></script>
 </body>
