un peu de resposive au cas ou

--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -5,6 +5,7 @@
     <title>Portfolio - Cienfuegos</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
+    <link rel="stylesheet" href="../responsive.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <link rel="apple-touch-icon" href="../img/logo.png">
