--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -5,6 +5,7 @@
     <title>Portfolio - Grizzlys Catalans</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
+    <link rel="stylesheet" href="../responsive.css">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon-32x32.png">
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <link rel="apple-touch-icon" href="../img/logo.png">
@@ -306,7 +307,7 @@
 </div>
 <script src="../modal.js">
 
-</script> src="../data.js"></script>
+</script src="../data.js"></script>
 <script src="../script.js"></script>
 
 </body>
