corection de bug

--- a/presentation.html
+++ b/presentation.html
@@ -11,6 +11,11 @@
     <link rel="apple-touch-icon" href="./img/logo.png">
 </head>
 <body style="overflow-x: hidden;">
+<div id="myModal" class="modal">
+    <span class="close">&times;</span>
+    <img class="modal-content" id="img01">
+    <div id="caption"></div>
+</div>
 <div id="page-wrapper">
     <div class="PagePres">
         <nav class="navbar">
@@ -178,6 +183,7 @@
         </footer>
     </div>
 </div>
+<script src="modal.js"></script>
 <script src="data.js"></script>
 <script src="script.js"></script>
 </body>
