--- a/projects/basket.html
+++ b/projects/basket.html
@@ -55,7 +55,7 @@
             </div>
             <div>
                 <h2 class="infoMiniTitle">LOCALISATION</h2>
-                <p class="infoMiniText">BAGES</p>
+                <p class="infoMiniText">BROUILLA, BAGES, SAINT-GÉNIS DES FONTAINES ET SAINT-JEAN LASEILLE</p>
             </div>
             <div>
                 <h2 class="infoMiniTitle">ANNÉE</h2>
@@ -70,7 +70,7 @@
                 Aspres, elle affiche une identité visuelle entièrement renouvelée, avec un nouveau nom et de nouvelles
                 couleurs.
                 Implantée dans les communes de Brouilla, Bages et Saint-Génis des Fontaines, l’UBA accueille aujourd’hui
-                près de 200 licenciés répartis sur une dizaine d’équipes, de U7 aux loisirs.</p>
+                près de 150 licenciés répartis sur une dizaine d’équipes, de U7 aux loisirs.</p>
         </div>
     </div>
     <h1 class="titreIdentite">Idéntité visuelle</h1>
