--- a/projects/catalattitude.html
+++ b/projects/catalattitude.html
@@ -72,7 +72,7 @@
             <p class="infoMiniText"><strong>Catal’attitude Groupe</strong> regroupe trois activités liées au territoire
                 catalan.
                 <br><strong>L’Accent Catalan</strong> est une boutique, en ligne et en local, qui propose des coffrets
-                cadeaux remplis de produits artisanaux catalans. Elle met en avant les producteurs locaux et offre des
+                cadeaux composés de produits artisanaux catalans. Elle met en avant les producteurs locaux et offre des
                 box personnalisables pour les particuliers comme pour les professionnels.
                 <br><strong>Meeting Pro Catalan</strong> organise des rencontres mensuelles pour les entrepreneurs du
                 département. Ces moments d’échange permettent de créer des contacts, de discuter et de développer un
@@ -362,7 +362,7 @@
             <p class="rectoverso">Verso</p>
         </div>
     </div>
-    <p class="texteCadeau">Créée pour Noël, cette carte cadeau sert à offrir l’abonnement à la box apéro : elle explique
+    <p class="texteCadeau">Créée pour Noël, cette carte cadeau offre l’abonnement à la box apéro : elle explique
         le concept d'un côté et permet de personnaliser le cadeau de l'autre.</p>
 
     <h1 class="titreIdentite">Site calendrier de l'avent</h1>
