--- a/projects/cienfuegos.html
+++ b/projects/cienfuegos.html
@@ -115,7 +115,7 @@
         <div class="videoDetailSection">
             <div class="detailLineCienfuegos"></div>
             <div class="detailContent">
-                <h2 class="detailTitle">RÉALISATION AUDIOVISUELLE</h2>
+                <h2 class="detailTitle">RÉALISATION PRINT</h2>
                 <p class="detailText">
                     C’est une tendance TikTok dont le but est de donner envie aux jeunes d’aller au festival, en
                     suggérant que l’ambiance était géniale, puisque les participantes annoncent qu’elles reviendront
