--- a/projects/escapix.html
+++ b/projects/escapix.html
@@ -64,7 +64,7 @@
             </div>
             <div>
                 <h2 class="infoMiniTitle">ANNÉE</h2>
-                <p class="infoMiniText">2025</p>
+                <p class="infoMiniText">2024</p>
             </div>
         </div>
         <div class="informationsProjectRight">
@@ -130,7 +130,7 @@
     </div>
 
     <div class="buttonStratégieEscapix">
-        <a href="#">
+        <a href="https://www.canva.com/design/DAGTehBh2hc/2nUzZXHWaoFZlwjUbUHI9w/view?utm_content=DAGTehBh2hc&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=ha20f49b47f">
             <button class="lienStratégieEscapix">Lien Stratégie</button>
         </a>
     </div>
