--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -70,7 +70,7 @@
         </div>
         <div class="informationsProjectRight">
             <h2 class="infoMiniTitle">DESCRIPTION</h2>
-            <p class="infoMiniText">Les <strong>Grizzlys Catalans</strong> sont un club de football américain fondé en
+            <p class="infoMiniText">Les <strong>Grizzlys Catalans</strong> est un club de football américain fondé en
                 2012, aujourd’hui basé à Perpignan. Rapidement montés en puissance, ils ont remporté le championnat de
                 France de Division 3 en 2018 avant d’accéder à la Division Élite en 2020, le plus haut niveau national.
                 Le club, présidé par Laurent Aliu, évolue au Parc des Sports et porte les couleurs noir et beige.
