--- a/projects/lycee.html
+++ b/projects/lycee.html
@@ -67,7 +67,7 @@
             <p class="infoMiniText">Le <strong>lycée Aristide Maillol</strong> de Perpignan a été créé au milieu des
                 années 1990 et a ouvert ses portes vers 1995-1996, pour répondre à l’augmentation du nombre d’élèves
                 dans la ville.
-                <br>La formation BTS Communication y est proposée depuis les années 2010. Elle prépare les étudiants aux
+                <br>La formation BTS Communication y est proposée depuis 2010. Elle prépare les étudiants aux
                 métiers de la communication en deux ans après le baccalauréat.</p>
         </div>
     </div>
