--- a/projects/vincenzo.html
+++ b/projects/vincenzo.html
@@ -66,8 +66,8 @@
             <h2 class="infoMiniTitle">DESCRIPTION</h2>
             <p class="infoMiniText">Ce site internet pour le <STRONG>Restaurant Vincenzo</STRONG> a été réalisé sur
                 WordPress. Il s'agit d'un exercice fictif créé dans un cadre scolaire, le restaurant n'existant pas
-                réellement. L'objectif de ce projet était de recopier exactement le site de mon formateur pour apprendre
-                à maîtriser les outils de WordPress et à respecter scrupuleusement une mise en page imposée.</p>
+                réellement. L'objectif de ce projet était de recopier exactement le site de mon professeur pour apprendre
+                à maîtriser les outils de WordPress et à respecter une mise en page imposée.</p>
         </div>
     </div>
     <h1 class="titreIdentite">Idéntité visuelle</h1>
