retouche page conatct

--- a/contact.html
+++ b/contact.html
@@ -104,15 +104,15 @@
             </div>
         </nav>
         <div class="passionContact">
-            <h1 class="passionTitle">CONATACT</h1>
+            <h1 class="passionTitle">CONTACT</h1>
             <p class="passionSubTitle">Contact</p>
-            <p class="passiontext">VOTRE PROJET DE COMMUNICATION COMMENCE ICI : BIENVENUE À LA PORTE D'EMBARQUEMENT !</p>
+            <p class="passiontext">VOTRE PROJET DE COMMUNICATION COMMENCE ICI : BIENVENUE À LA PORTE D'EMBARQUEMENT ! <br>
+            CLIQUEZ POUR COMMENCER LE VOYAGE</p>
 
         </div>
         <div class="Contact" onclick="openContactModal()">
-            <img src="./img/avionContact.png" alt="avion" class="ContactImg1">
-            <img src="./img/Page%20contact.png" alt="tegbdkzc">
-            <img src="./img/avion2conatct.png" alt="cdzzd" class="ContactImg2">
+            <img src="./img/conatct1.webp" alt="tegbdkzc" class="contactImg1">
+            <img src="./img/contact2.webp" alt="tegbdkzc" class="contactImg2">
         </div>
     <footer>
         <nav class="footerNavbar">
